[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadcode"
version = "0.1.0"
description = "Статический поиск мёртвого кода в Python-проектах"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deadcode = "deadcode.__main__:main"

[tool.ruff]
line-length = 100
